<resources>
    <string name="app_name">Notique</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_note">New Note</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="deel_note">Deel jouw note</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="date_newest">DateNewest</string>
    <string name="date_oldest">DateOldest</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="dot">dot</string>
    <string name="noteimage">noteImage</string>
    <string name="note_added">Note is added!</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="note_edited">Note is edited!</string>
    <string name="delete_all_notes_message">Are you sure you want to delete all your notes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_by">Sort By</string>
    <string name="sort">SORT</string>
    <string name="cancel">CANCEL</string>
    <string name="Note_deleted">Note Deleted</string>
    <string name="all_notes_deleted">All Notes have been deleted</string>
    <string name="share_note">Share Note</string>
    <string name="search_note">Search Note</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="filter_notes">Filter Notes</string>
    <string name="title_can_not_be_empty">Title can not be empty!</string>
    <string name="bijlage">Bijlage</string>
    <string name="delete">Delete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="permission_denied">Permission denied</string>
    <string name="description">Description</string>
    <string name="title_add_note">Title</string>
    <string name="title_edit_note">Title</string>
    <string name="description_edit_note">Description</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_notes">No Notes</string>
    <string name="you_don_t_have_any_notes_at_the_moment_add_new_notes_to_see_them_here">You don\'t have any notes at the moment. Add new notes to see them here.</string>
    <string name="nav_header_title">Notique</string>
    <string name="description_add_note">Description</string>

    <string-array name="filter_notes">
        <item>Title: A-Z</item>
        <item>Title: Z-A</item>
        <item>Date from newest</item>
        <item>Date from oldest</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_deleted_notes">Trash</string>
</resources>
